# tweet_collector

./: .gitignore  LICENSE  README.md  load_elastic.sh  mapping_twitter_tweet.json  pyproject.toml  search_tweet.sh
.github/workflows/: on_pull_request.yaml
config/: .twitter_keys.yaml  api_config.config  api_config.config.TEMPLATE
examples/: .twitter_keys.yaml  api_config.config
guidelines/: 1_Academic_Research_application.ipynb  1_Academic_Research_application.md  2_Search_Tweets.ipynb  2_Setup Environment.md  2_Setup_Env.ipynb  3_Elasticsearch_and_Kibana.ipynb  3_Search_Tweets.ipynb  3_Search_Tweets.md  4_Elasticsearch_and_Kibana.ipynb  4_Visualization.ipynb  4_Visualization.md  guideline.ipynb  guideline_inputfile.ipynb
guidelines/example/: .twitter_keys.yaml  api_config.config
src/: README.md  load_elastic.py  search_tweet.py  tweet_utils.py
tests/: __init__.py
tweet_collector/: load_elastic.py  search_tweet.py  tweet_utils.py
