[tool.poetry]
name = "tweet_collector"
version = "0.1.0"
description = ""
authors = ["parisa-zahedi <p.zahedi@uu.nl>","roos-voorvaart <r.voorvaart@uu.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
pathlib = "^1.0.1"
requests = "^2.25.1"
requests-oauthlib = "^1.3.0"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
